--- a/galleryProject.html
+++ b/galleryProject.html
@@ -13,7 +13,7 @@
             <h1>My Gallery</h1>
             <div class="gallery">
                 <figure class="card">
-                    <img src="image1.jpg" >
+                    <img src="./image1.jpg" >
                     <figcaption>image-1</figcaption>
                 </figure>
 
